# termite

./: .gitignore  LEARN.md  README.md  demo.md  pyproject.toml
.github/workflows/: publish.yml
src/termite/: __init__.py  __main__.py  cases.py  chars.py  cli.py  colors.py  cursor.py  emojis.py  fancy.py  raw.py  sim.py  strip.py  styles.py  sub.py  sub3.py  tc.py  terminal.py  unicode.py  view.py
src/termite/art/: __init__.py  big.py  box.py
src/termite/md/: __init__.py  __main__.py  renderer.py
src/termite/md/handlers/: __init__.py  blocks.py  code.py  headers.py  links.py  lists.py  text.py
src/termite/md/handlers/syntax/: __init__.py  bash.py  generic.py  python.py
src/termite/raw/: __init__.py  bg_colors.py  braille.py  emojis.py  fg_colors.py  hex_colors.py  styles.py  unicode.py
